--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
         <h3 class="developer-name">MikiTran</h3>
         <div class="developer-meta"><span class="developer-job">Nodejs Developer</span><span class="developer-rate"></span></div>
       </div>
+      <p class="developer-description">This is a description</p>
       <div class="developer-item">
         <div class="developer-image"><img src="https://images.unsplash.com/photo-1685639837214-bedaccf96afc?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=387&amp;q=80" alt="mikitran"/></div>
         <h3 class="developer-name">SGBD</h3>
         <div class="developer-meta"><span class="developer-job">Police</span><span class="developer-rate"></span></div>
       </div>
+      <p class="developer-other">This is an example of descscription.</p>
       <div class="developer-item">
         <div class="developer-image"><img src="https://images.unsplash.com/photo-1685460939882-da7c7cb6f3ae?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=387&amp;q=80" alt="mikitran"/></div>
         <h3 class="developer-name">Poo</h3>
         <div class="developer-meta"><span class="developer-job">My Pet</span><span class="developer-rate"></span></div>
       </div>
+      <p class="developer-other">This is an example of descscription.</p>
     </div>
   </body>
 </html>
